--- a/apkTools_release/tools/generator/string_generator.html
+++ b/apkTools_release/tools/generator/string_generator.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>多种字符串生成器</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -133,7 +137,7 @@
 
     .result-item {
       padding: 8px 0;
-      border-bottom: 1px solid #e9ecef
+      border-bottom: 1px solid var(--color-border)
     }
 
     .result-item:last-child {
@@ -144,7 +148,7 @@
       position: absolute;
       top: 10px;
       right: 10px;
-      background: #667eea;
+      background: var(--color-primary);
       color: var(--color-text-on-primary);
       border: none;
       padding: 6px 12px;
