--- a/apkTools_release/tools/analyzer/apk_analyzer.html
+++ b/apkTools_release/tools/analyzer/apk_analyzer.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>APK 信息提取工具</title>
-    <link rel="stylesheet" href="../../assets/css/theme.css">
+      <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/forge/1.3.1/forge.min.js"></script>
@@ -130,7 +134,7 @@
 
         .result-label {
             font-weight: 600;
-            color: #495057;
+            color: var(--color-text-secondary);
             margin-bottom: 8px;
             font-size: var(--font-size-small);
         }
@@ -142,14 +146,14 @@
         }
 
         .result-value {
-            color: #212529;
+            color: var(--color-text);
             word-break: break-all;
             font-family: 'Courier New', monospace;
             font-size: 13px;
             background: var(--color-surface);
             padding: 10px;
             border-radius: 4px;
-            border: 1px solid #dee2e6;
+            border: 1px solid var(--color-border);
             flex: 1;
             white-space: pre-line;
         }
@@ -165,8 +169,8 @@
         }
 
         .spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #667eea;
+            border: 4px solid var(--color-border);
+            border-top: 4px solid var(--color-primary);
             border-radius: 50%;
             width: 40px;
             height: 40px;
@@ -185,9 +189,9 @@
         }
 
         .error {
-            background: #fee;
-            border-left-color: #dc3545;
-            color: #721c24;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-error);
+            color: var(--color-error);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-top: 20px;
@@ -199,7 +203,7 @@
         }
 
         .copy-btn {
-            background: #667eea;
+            background: var(--color-primary);
             color: var(--color-text-on-primary);
             border: none;
             padding: 8px 16px;
@@ -212,7 +216,7 @@
         }
 
         .copy-btn:hover {
-            background: #764ba2;
+            background: var(--color-primary-dark);
             transform: translateY(-1px);
         }
 
