--- a/apkTools_release/tools/converter/color_converter.html
+++ b/apkTools_release/tools/converter/color_converter.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RGB 颜色互转工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -98,7 +102,7 @@
       width: 100%;
       height: 120px;
       border-radius: var(--radius-sm);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       margin-top: 10px;
       background: #f0f0f0
     }
@@ -114,7 +118,7 @@
     .color-presets-group-title {
       font-size: var(--font-size-base);
       font-weight: 600;
-      color: #495057;
+      color: var(--color-text-secondary);
       margin-bottom: 12px;
       padding-bottom: 8px;
       border-bottom: 2px solid #667eea
@@ -132,7 +136,7 @@
       align-items: center;
       gap: 10px;
       background: var(--color-surface);
-      border: 1px solid #dee2e6;
+      border: 1px solid var(--color-border);
       border-radius: 6px;
       padding: 8px;
       cursor: pointer;
@@ -174,7 +178,7 @@
 
     .color-card-name {
       font-weight: 600;
-      color: #495057;
+      color: var(--color-text-secondary);
       font-size: 13px;
       white-space: normal;
       word-break: break-word;
@@ -213,7 +217,7 @@
 
     .result-display {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       padding: var(--spacing-md);
       margin-top: 15px;
