--- a/apkTools_release/tools/converter/timestamp_converter.html
+++ b/apkTools_release/tools/converter/timestamp_converter.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>时间戳转换工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -81,7 +85,7 @@
     .form-group label {
       display: block;
       font-weight: 600;
-      color: #495057;
+      color: var(--color-text-secondary);
       margin-bottom: 8px;
       font-size: 14px
     }
@@ -90,7 +94,7 @@
     .form-group select {
       width: 100%;
       padding: 12px;
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       font-size: 14px
     }
@@ -127,14 +131,14 @@
 
     .result-card {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       padding: 15px
     }
 
     .result-card-title {
       font-weight: 600;
-      color: #495057;
+      color: var(--color-text-secondary);
       margin-bottom: 8px;
       font-size: 14px
     }
@@ -158,14 +162,14 @@
     }
 
     .status.success {
-      background: #d4edda;
-      color: #155724;
+      background: var(--color-surface-alt);
+      color: var(--color-success);
       border: 1px solid #c3e6cb
     }
 
     .status.error {
-      background: #f8d7da;
-      color: #721c24;
+      background: var(--color-surface-alt);
+      color: var(--color-error);
       border: 1px solid #f5c6cb
     }
   </style>
