--- a/apkTools_release/tools/converter/unit_converter.html
+++ b/apkTools_release/tools/converter/unit_converter.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>单位转换工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -80,7 +84,7 @@
       gap: 12px;
       margin-bottom: 20px;
       padding-bottom: 16px;
-      border-bottom: 2px solid #f1f3f5;
+      border-bottom: 2px solid var(--color-border);
     }
 
     .card-icon {
@@ -150,7 +154,7 @@
 
     .unit-input:focus {
       outline: none;
-      border-color: #667eea;
+      border-color: var(--color-primary);
       background: var(--color-surface);
       box-shadow: 0 0 0 4px rgba(102, 126, 234, .1);
     }
@@ -171,7 +175,7 @@
 
     .unit-select:focus {
       outline: none;
-      border-color: #667eea;
+      border-color: var(--color-primary);
       box-shadow: 0 0 0 4px rgba(102, 126, 234, .1);
     }
 
@@ -197,7 +201,7 @@
       display: flex;
       align-items: center;
       word-break: break-all;
-      border: 1px solid #dee2e6;
+      border: 1px solid var(--color-border);
       display: none;
     }
 
