--- a/apkTools_release/tools/developer/device_preview.html
+++ b/apkTools_release/tools/developer/device_preview.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>机型预览信息工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
-    
+
     .container {
       max-width: 1400px;
     }
@@ -120,7 +124,7 @@
 
     .brand-group {
       background: var(--color-surface);
-      border: 1px solid #dee2e6;
+      border: 1px solid var(--color-border);
       border-radius: var(--radius-sm);
       overflow: hidden
     }
@@ -131,13 +135,13 @@
       justify-content: space-between;
       padding: 10px 15px;
       background: var(--color-surface-alt);
-      border-bottom: 1px solid #dee2e6;
+      border-bottom: 1px solid var(--color-border);
       cursor: pointer;
       transition: background .2s
     }
 
     .brand-group-header:hover {
-      background: #e9ecef
+      background: var(--color-hover)
     }
 
     .brand-group-title {
@@ -145,7 +149,7 @@
       align-items: center;
       gap: 10px;
       font-weight: 600;
-      color: #212529;
+      color: var(--color-text);
       font-size: 14px
     }
 
@@ -156,7 +160,7 @@
       object-fit: contain;
       background: var(--color-surface);
       padding: 2px;
-      border: 1px solid #dee2e6
+      border: 1px solid var(--color-border)
     }
 
     .brand-group-count {
@@ -199,10 +203,21 @@
     }
 
     .device-card:hover {
-      border-color: #667eea;
-      box-shadow: 0 2px 8px rgba(102, 126, 234, .1);
+      border-color: var(--color-primary);
+      box-shadow: 0 2px 8px var(--color-shadow-primary);
       transform: translateY(-1px);
-      background: #fff
+      background: var(--color-hover);
+    }
+
+    .device-card.selected,
+    .device-card:focus {
+      border-color: var(--color-primary);
+      background: var(--color-hover);
+      box-shadow: 0 0 0 2px var(--color-shadow-primary);
+    }
+
+    .device-card:focus {
+      outline: none;
     }
 
     .device-header {
@@ -219,7 +234,7 @@
       object-fit: contain;
       background: var(--color-surface);
       padding: 2px;
-      border: 1px solid #dee2e6;
+      border: 1px solid var(--color-border);
       flex-shrink: 0;
       margin-top: 2px
     }
@@ -232,7 +247,7 @@
     .device-name {
       font-size: var(--font-size-small);
       font-weight: 600;
-      color: #212529;
+      color: var(--color-text);
       margin-bottom: 2px;
       line-height: 1.3;
       overflow: hidden;
@@ -258,7 +273,7 @@
       gap: 6px;
       margin-top: 4px;
       padding-top: 4px;
-      border-top: 1px solid #e9ecef
+      border-top: 1px solid var(--color-border)
     }
 
     .info-item {
@@ -274,7 +289,7 @@
 
     .info-value {
       font-size: 10px;
-      color: #212529;
+      color: var(--color-text);
       font-weight: 500;
       line-height: 1.3
     }
@@ -290,7 +305,8 @@
     .empty-state {
       text-align: center;
       padding: 60px 20px;
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .empty-state-icon {
       font-size: 64px;
@@ -305,11 +321,12 @@
     .loading {
       text-align: center;
       padding: var(--spacing-xl);
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .loading-spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #667eea;
+      border: 4px solid var(--color-border);
+      border-top: 4px solid var(--color-primary);
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -394,7 +411,7 @@
 
     .modal-header {
       padding: 20px 25px;
-      border-bottom: 1px solid #e9ecef;
+      border-bottom: 1px solid var(--color-border);
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -407,7 +424,7 @@
     .modal-title {
       font-size: 20px;
       font-weight: 600;
-      color: #212529;
+      color: var(--color-text);
       display: flex;
       align-items: center;
       gap: 12px
@@ -430,7 +447,7 @@
 
     .modal-close:hover {
       background: var(--color-surface-alt);
-      color: #212529
+      color: var(--color-text);
     }
 
     .modal-body {
@@ -475,7 +492,7 @@
       display: flex;
       justify-content: space-between;
       padding: 8px 0;
-      border-bottom: 1px solid #e9ecef
+      border-bottom: 1px solid var(--color-border)
     }
 
     .detail-item:last-child {
@@ -490,7 +507,7 @@
 
     .detail-value {
       font-size: 13px;
-      color: #212529;
+      color: var(--color-text);
       font-weight: 500;
       text-align: right;
       max-width: 60%
@@ -499,7 +516,7 @@
     .brand-website {
       margin-top: var(--spacing-lg);
       padding-top: 20px;
-      border-top: 2px solid #e9ecef;
+      border-top: 2px solid var(--color-border);
       text-align: center
     }
 
