--- a/apkTools_release/tools/developer/image_compressor.html
+++ b/apkTools_release/tools/developer/image_compressor.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>图片压缩工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -130,7 +134,7 @@
     }
 
     .file-upload-text {
-      color: #495057;
+      color: var(--color-text-secondary);
       font-size: var(--font-size-base);
       margin-bottom: 10px
     }
@@ -166,7 +170,8 @@
 
     .btn-secondary {
       background: #6c757d
-    }
+    
+      color: var(--color-text-on-primary);}
 
     .btn-secondary:hover {
       background: #5a6268
@@ -189,8 +194,8 @@
     }
 
     .info-box {
-      background: #e7f3ff;
-      border-left: 4px solid #2196F3;
+      background: var(--color-surface-alt);
+      border-left: 4px solid var(--color-info);
       padding: var(--spacing-md);
       border-radius: var(--radius-sm);
       margin-bottom: 20px;
@@ -206,15 +211,15 @@
     }
 
     .status-message.success {
-      background: #d4edda;
-      color: #155724;
+      background: var(--color-surface-alt);
+      color: var(--color-success);
       border: 1px solid #c3e6cb;
       display: block
     }
 
     .status-message.error {
-      background: #f8d7da;
-      color: #721c24;
+      background: var(--color-surface-alt);
+      color: var(--color-error);
       border: 1px solid #f5c6cb;
       display: block
     }
@@ -230,8 +235,8 @@
     }
 
     .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #667eea;
+      border: 4px solid var(--color-border);
+      border-top: 4px solid var(--color-primary);
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -261,7 +266,7 @@
 
     .preview-card {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-md);
       padding: 12px
     }
