--- a/apkTools_release/tools/developer/keystore_generator.html
+++ b/apkTools_release/tools/developer/keystore_generator.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android 签名文件生成工具</title>
-    <link rel="stylesheet" href="../../assets/css/theme.css">
+      <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/forge/1.3.1/forge.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -146,7 +150,7 @@
 
         .result-item {
             background: var(--color-surface-alt);
-            border-left: 4px solid #667eea;
+            border-left: 4px solid var(--color-primary);
             padding: 15px 20px;
             margin-bottom: 15px;
             border-radius: var(--radius-sm);
@@ -154,7 +158,7 @@
 
         .result-label {
             font-weight: 600;
-            color: #495057;
+            color: var(--color-text-secondary);
             margin-bottom: 8px;
             font-size: var(--font-size-small);
         }
@@ -166,14 +170,14 @@
         }
 
         .result-value {
-            color: #212529;
+            color: var(--color-text);
             word-break: break-all;
             font-family: 'Courier New', monospace;
             font-size: 13px;
             background: var(--color-surface);
             padding: 10px;
             border-radius: 4px;
-            border: 1px solid #dee2e6;
+            border: 1px solid var(--color-border);
             flex: 1;
             max-height: 200px;
             overflow-y: auto;
@@ -191,8 +195,8 @@
         }
 
         .spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #667eea;
+            border: 4px solid var(--color-border);
+            border-top: 4px solid var(--color-primary);
             border-radius: 50%;
             width: 40px;
             height: 40px;
@@ -211,9 +215,9 @@
         }
 
         .error {
-            background: #fee;
-            border-left-color: #dc3545;
-            color: #721c24;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-error);
+            color: var(--color-error);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-top: 20px;
@@ -225,9 +229,9 @@
         }
 
         .success {
-            background: #d4edda;
-            border-left-color: #28a745;
-            color: #155724;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-success);
+            color: var(--color-success);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-top: 20px;
@@ -239,11 +243,11 @@
         }
 
         .copy-btn {
-            background: #667eea;
+            background: var(--color-primary);
             color: var(--color-text-on-primary);
             border: none;
             padding: 8px 16px;
-            border-radius: 6px;
+            border-radius: var(--radius-sm);
             font-size: 13px;
             cursor: pointer;
             transition: all 0.2s;
@@ -252,7 +256,7 @@
         }
 
         .copy-btn:hover {
-            background: #764ba2;
+            background: var(--color-primary-dark);
             transform: translateY(-1px);
         }
 
@@ -261,7 +265,7 @@
         }
 
         .download-btn {
-            background: #28a745;
+            background: var(--color-success);
             color: var(--color-text-on-primary);
             border: none;
             padding: 12px 24px;
@@ -275,18 +279,18 @@
         }
 
         .download-btn:hover {
-            background: #218838;
+            opacity: 0.9;
             transform: translateY(-2px);
         }
 
         .info-box {
-            background: #e7f3ff;
-            border-left: 4px solid #2196F3;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-info);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-bottom: 20px;
             font-size: 13px;
-            color: #0c5460;
+            color: var(--color-text);
         }
 
         .history-section {
@@ -295,7 +299,7 @@
 
         .history-item {
             background: var(--color-surface);
-            border: 1px solid #dee2e6;
+            border: 1px solid var(--color-border);
             border-radius: var(--radius-sm);
             padding: var(--spacing-md);
             margin-bottom: 10px;
@@ -303,17 +307,17 @@
         }
 
         .history-item:hover {
-            border-color: #667eea;
+            border-color: var(--color-primary);
         }
 
         .history-item.expanded {
-            border-color: #667eea;
+            border-color: var(--color-primary);
             box-shadow: 0 2px 8px rgba(102, 126, 234, 0.2);
         }
 
         .history-item.highlight {
-            border-color: #28a745;
-            background: #f0fff4;
+            border-color: var(--color-success);
+            background: var(--color-surface-alt);
         }
 
         .history-header {
@@ -333,7 +337,7 @@
 
         .history-package {
             font-weight: 600;
-            color: #495057;
+            color: var(--color-text-secondary);
             margin-bottom: 5px;
         }
 
@@ -357,37 +361,37 @@
         }
 
         .history-btn.download {
-            background: #28a745;
+            background: var(--color-success);
             color: var(--color-text-on-primary);
         }
 
         .history-btn.download:hover {
-            background: #218838;
+            opacity: 0.9;
         }
 
         .history-btn.delete {
-            background: #dc3545;
+            background: var(--color-error);
             color: var(--color-text-on-primary);
         }
 
         .history-btn.delete:hover {
-            background: #c82333;
+            opacity: 0.9;
         }
 
         .history-btn.view {
-            background: #667eea;
+            background: var(--color-primary);
             color: var(--color-text-on-primary);
         }
 
         .history-btn.view:hover {
-            background: #764ba2;
+            background: var(--color-primary-dark);
         }
 
         .history-detail {
             display: none;
             margin-top: 20px;
             padding-top: 20px;
-            border-top: 1px solid #dee2e6;
+            border-top: 1px solid var(--color-border);
         }
 
         .history-detail.show {
@@ -411,7 +415,7 @@
         .search-box input {
             width: 100%;
             padding: 12px;
-            border: 2px solid #dee2e6;
+            border: 2px solid var(--color-border);
             border-radius: var(--radius-sm);
             font-size: var(--font-size-small);
         }
@@ -505,11 +509,11 @@
                     style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; flex-wrap: wrap; gap: 10px;">
                     <h2 style="margin: 0;">历史记录</h2>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                        <button class="history-btn" style="background: #28a745; color: var(--color-text-on-primary);"
+                        <button class="history-btn" style="background: var(--color-success); color: var(--color-text-on-primary);"
                             onclick="exportAllToProject()">导出所有到项目目录</button>
                         <button class="history-btn" style="background: #17a2b8; color: var(--color-text-on-primary);"
                             onclick="exportHistoryToFile()">导出元数据</button>
-                        <button class="history-btn" style="background: #6c757d; color: var(--color-text-on-primary);"
+                        <button class="history-btn" style="background: var(--color-secondary); color: var(--color-text-on-primary);"
                             onclick="importHistoryFromFile()">导入历史</button>
                     </div>
                 </div>
