--- a/apkTools_release/tools/developer/string_encryptor.html
+++ b/apkTools_release/tools/developer/string_encryptor.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>字符串加解密工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -153,20 +157,20 @@
     }
 
     .status.success {
-      background: #d4edda;
-      color: #155724;
+      background: var(--color-surface-alt);
+      color: var(--color-success);
       border: 1px solid #c3e6cb
     }
 
     .status.error {
-      background: #f8d7da;
-      color: #721c24;
+      background: var(--color-surface-alt);
+      color: var(--color-error);
       border: 1px solid #f5c6cb
     }
 
     .result-area {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       padding: var(--spacing-md);
       min-height: 120px;
@@ -183,7 +187,7 @@
     .input-box-wrapper,
     .output-box-wrapper {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-md);
       padding: 20px;
       display: flex;
@@ -285,8 +289,8 @@
 
     .tab-btn {
       background: var(--color-surface-alt);
-      color: #495057;
-      border: 2px solid #dee2e6;
+      color: var(--color-text-secondary);
+      border: 2px solid var(--color-border);
       padding: 10px 20px;
       border-radius: var(--radius-sm);
       cursor: pointer;
