--- a/apkTools_release/tools/formatter/json_to_model.html
+++ b/apkTools_release/tools/formatter/json_to_model.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JSON 转 Model 工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -146,7 +150,7 @@
     .option-item input[type="checkbox"],
     .option-item input[type="text"] {
       padding: 8px 12px;
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: 6px;
       font-size: 14px
     }
@@ -157,7 +161,7 @@
 
     .option-item label {
       font-weight: 500;
-      color: #495057;
+      color: var(--color-text-secondary);
       cursor: pointer
     }
 
@@ -182,9 +186,9 @@
     }
 
     .btn-primary {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, var(--color-primary) 0%, var(--color-primary-dark) 100%);
       color: var(--color-text-on-primary);
-      box-shadow: 0 4px 15px rgba(102, 126, 234, .3)
+      box-shadow: 0 4px 15px var(--color-shadow-primary);
     }
 
     .btn-primary:hover {
@@ -193,28 +197,29 @@
     }
 
     .btn-secondary {
-      background: #6c757d;
-      color: #fff
+      background: var(--color-secondary);
+      color: var(--color-text-on-primary);
     }
 
     .btn-secondary:hover {
-      background: #5a6268;
+      background: var(--color-primary-dark);
       transform: translateY(-2px)
     }
 
     .btn-success {
-      background: #28a745;
-      color: #fff
+      background: var(--color-success);
+      color: var(--color-text-on-primary);
     }
 
     .btn-success:hover {
-      background: #218838;
+      background: var(--color-success);
       transform: translateY(-2px)
-    }
+    
+      color: var(--color-text-on-primary);}
 
     .result-section {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-md);
       padding: 20px;
       margin-top: 20px
@@ -222,7 +227,7 @@
 
     .result-section h3 {
       font-size: var(--font-size-large);
-      color: #495057;
+      color: var(--color-text-secondary);
       margin-bottom: 15px;
       display: flex;
       justify-content: space-between;
@@ -245,20 +250,20 @@
     }
 
     .error-message {
-      background: #f8d7da;
-      color: #721c24;
+      background: var(--color-surface-alt);
+      color: var(--color-error);
       padding: var(--spacing-md);
       border-radius: var(--radius-sm);
-      border-left: 4px solid #dc3545;
+      border-left: 4px solid var(--color-error);
       margin-bottom: 20px
     }
 
     .success-message {
-      background: #d4edda;
-      color: #155724;
+      background: var(--color-surface-alt);
+      color: var(--color-success);
       padding: var(--spacing-md);
       border-radius: var(--radius-sm);
-      border-left: 4px solid #28a745;
+      border-left: 4px solid var(--color-success);
       margin-bottom: 20px
     }
 
@@ -266,7 +271,7 @@
       font-size: var(--font-size-small);
       padding: 6px 12px;
       background: var(--color-surface-alt);
-      color: #495057;
+      color: var(--color-text-secondary);
       border: none;
       border-radius: 6px;
       cursor: pointer;
