--- a/apkTools_release/tools/generator/icon_factory.html
+++ b/apkTools_release/tools/generator/icon_factory.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>图标工厂 - iOS & Android</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <style>
     /* 继承theme.css的基础样式 */
@@ -164,8 +168,8 @@
     }
 
     .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #667eea;
+      border: 4px solid var(--color-border);
+      border-top: 4px solid var(--color-primary);
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -191,7 +195,7 @@
 
     .preview-card {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-md);
       padding: 12px;
       text-align: center
@@ -209,7 +213,7 @@
       border-radius: var(--radius-lg);
       object-fit: contain;
       background: var(--color-surface-alt);
-      border: 1px dashed #e9ecef
+      border: 1px dashed var(--color-border)
     }
 
     .status {
@@ -224,14 +228,14 @@
     }
 
     .status.success {
-      background: #d4edda;
-      color: #155724;
+      background: var(--color-surface-alt);
+      color: var(--color-success);
       border: 1px solid #c3e6cb
     }
 
     .status.error {
-      background: #f8d7da;
-      color: #721c24;
+      background: var(--color-surface-alt);
+      color: var(--color-error);
       border: 1px solid #f5c6cb
     }
   </style>
