--- a/apkTools_release/tools/generator/launch_image_generator.html
+++ b/apkTools_release/tools/generator/launch_image_generator.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>启动图生成工具 - iOS & Android</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -137,7 +141,7 @@
     }
 
     .file-upload-text {
-      color: #495057;
+      color: var(--color-text-secondary);
       font-size: var(--font-size-base);
       margin-bottom: 10px;
     }
@@ -199,24 +203,24 @@
     .platform-tab {
       flex: 1;
       padding: 12px;
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       background: var(--color-surface);
       cursor: pointer;
       text-align: center;
       font-weight: 600;
-      color: #495057;
+      color: var(--color-text-secondary);
       transition: all 0.3s;
     }
 
     .platform-tab.active {
-      background: #667eea;
+      background: var(--color-primary);
       color: var(--color-text-on-primary);
-      border-color: #667eea;
+      border-color: var(--color-primary);
     }
 
     .platform-tab:hover {
-      border-color: #667eea;
+      border-color: var(--color-primary);
     }
 
     .sizes-grid {
@@ -228,7 +232,7 @@
 
     .size-item {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       padding: var(--spacing-md);
       text-align: center;
@@ -236,18 +240,18 @@
     }
 
     .size-item:hover {
-      border-color: #667eea;
+      border-color: var(--color-primary);
       box-shadow: 0 4px 12px rgba(102, 126, 234, 0.2);
     }
 
     .size-item.selected {
-      border-color: #667eea;
+      border-color: var(--color-primary);
       background: #f8f9ff;
     }
 
     .size-label {
       font-weight: 600;
-      color: #495057;
+      color: var(--color-text-secondary);
       margin-bottom: 5px;
     }
 
@@ -291,12 +295,13 @@
     }
 
     .btn-secondary {
-      background: #6c757d;
+      background: var(--color-secondary);
       color: var(--color-text-on-primary);
-    }
+    
+      color: var(--color-text-on-primary);}
 
     .btn-secondary:hover {
-      background: #5a6268;
+      background: var(--color-primary-dark);
     }
 
     .btn-group {
@@ -314,7 +319,7 @@
     .color-picker {
       width: 60px;
       height: 40px;
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       cursor: pointer;
     }
@@ -335,22 +340,22 @@
     }
 
     .status-message.success {
-      background: #d4edda;
-      color: #155724;
+      background: var(--color-surface-alt);
+      color: var(--color-success);
       border: 1px solid #c3e6cb;
       display: block;
     }
 
     .status-message.error {
-      background: #f8d7da;
-      color: #721c24;
+      background: var(--color-surface-alt);
+      color: var(--color-error);
       border: 1px solid #f5c6cb;
       display: block;
     }
 
     .status-message.info {
-      background: #d1ecf1;
-      color: #0c5460;
+      background: var(--color-surface-alt);
+      color: var(--color-text);
       border: 1px solid #bee5eb;
       display: block;
     }
@@ -366,8 +371,8 @@
     }
 
     .spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #667eea;
+      border: 4px solid var(--color-border);
+      border-top: 4px solid var(--color-primary);
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -462,7 +467,7 @@
       right: 20px;
       background: rgba(255, 255, 255, 0.2);
       color: var(--color-text-on-primary);
-      border: 2px solid white;
+      border: 2px solid var(--color-border);
       border-radius: 50%;
       width: 50px;
       height: 50px;
