--- a/apkTools_release/tools/generator/qrcode_generator.html
+++ b/apkTools_release/tools/generator/qrcode_generator.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>二维码/条形码生成工具</title>
-  <link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jsbarcode/3.11.5/JsBarcode.all.min.js"></script>
   <style>
@@ -160,7 +164,7 @@
 
     .preview-section {
       background: var(--color-surface);
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-md);
       padding: var(--spacing-lg);
       text-align: center;
@@ -169,7 +173,7 @@
 
     .preview-section h3 {
       font-size: var(--font-size-large);
-      color: #495057;
+      color: var(--color-text-secondary);
       margin-bottom: 20px
     }
 
@@ -226,7 +230,7 @@
 
     .style-preset {
       padding: 10px;
-      border: 2px solid #dee2e6;
+      border: 2px solid var(--color-border);
       border-radius: var(--radius-sm);
       cursor: pointer;
       text-align: center;
@@ -235,12 +239,12 @@
     }
 
     .style-preset:hover {
-      border-color: #667eea;
+      border-color: var(--color-primary);
       transform: translateY(-2px)
     }
 
     .style-preset.active {
-      border-color: #667eea;
+      border-color: var(--color-primary);
       background: #f0f2ff
     }
   </style>
