--- a/apkTools_release/tools/generator/text_image_generator.html
+++ b/apkTools_release/tools/generator/text_image_generator.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文字图片生成工具</title>
-    <link rel="stylesheet" href="../../assets/css/theme.css">
+      <!-- Google Fonts - 艺术字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../../assets/css/theme.css">
     <style>
         /* 继承theme.css的基础样式 */
         /* 以下是工具页面特定的样式覆盖 */
@@ -198,14 +202,14 @@
             font-size: var(--font-size-large);
             color: var(--color-text);
             margin-bottom: 20px;
-            border-bottom: 2px solid #667eea;
+            border-bottom: 2px solid var(--color-primary);
             padding-bottom: 10px;
             text-align: left;
         }
 
         .preview-canvas-wrapper {
             display: inline-block;
-            border: 2px solid #dee2e6;
+            border: 2px solid var(--color-border);
             border-radius: var(--radius-sm);
             padding: 10px;
             background: var(--color-surface-alt);
@@ -213,18 +217,18 @@
         }
 
         .preview-info {
-            background: #e7f3ff;
-            border-left: 4px solid #2196F3;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-info);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-bottom: 20px;
             font-size: 13px;
-            color: #0c5460;
+            color: var(--color-text);
             text-align: left;
         }
 
         .download-btn {
-            background: #28a745;
+            background: var(--color-success);
             color: var(--color-text-on-primary);
             border: none;
             padding: 12px 24px;
@@ -238,7 +242,7 @@
         }
 
         .download-btn:hover {
-            background: #218838;
+            background: var(--color-success);
             transform: translateY(-2px);
         }
 
@@ -249,7 +253,7 @@
         }
 
         .preset-card {
-            border: 2px solid #dee2e6;
+            border: 2px solid var(--color-border);
             border-radius: 10px;
             padding: 6px;
             background: var(--color-surface);
@@ -268,14 +272,14 @@
         }
 
         .preset-card.selected {
-            border-color: #667eea;
+            border-color: var(--color-primary);
             box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.2);
         }
 
         .preset-label {
             margin-top: 6px;
             font-size: 10px;
-            color: #495057;
+            color: var(--color-text-secondary);
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -289,9 +293,9 @@
         }
 
         .error {
-            background: #fee;
-            border-left-color: #dc3545;
-            color: #721c24;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-error);
+            color: var(--color-error);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-top: 20px;
@@ -303,9 +307,9 @@
         }
 
         .success {
-            background: #d4edda;
-            border-left-color: #28a745;
-            color: #155724;
+            background: var(--color-surface-alt);
+            border-left: 4px solid var(--color-success);
+            color: var(--color-success);
             padding: var(--spacing-md);
             border-radius: var(--radius-sm);
             margin-top: 20px;
@@ -327,8 +331,8 @@
         }
 
         .spinner {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #667eea;
+            border: 4px solid var(--color-border);
+            border-top: 4px solid var(--color-primary);
             border-radius: 50%;
             width: 40px;
             height: 40px;
