1. 重构主题颜色 2. 添加 markdown 编辑器

--- a/apkTools_release/tools/converter/svg_converter.html
+++ b/apkTools_release/tools/converter/svg_converter.html
@@ -376,7 +376,7 @@
         inputPreview.appendChild(iframe);
       } else {
         const img = new Image();
-        img.src = inputDataURL; img.style.maxWidth = '100%'; img.style.borderRadius = '8px'; img.style.background = '#fafafa';
+        img.src = inputDataURL; img.style.maxWidth = '100%'; img.style.borderRadius = '8px'; img.style.background = 'transparent';
         inputPreview.appendChild(img);
       }
     }
