--- a/apkTools_release/tools/analyzer/api_debugger.html
+++ b/apkTools_release/tools/analyzer/api_debugger.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>API 调试工具</title>
-    <!-- Google Fonts - 艺术字体 -->
+  <!-- Google Fonts - 艺术字体 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../../assets/css/theme.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -149,7 +151,8 @@
 
     .btn-secondary {
       background: var(--color-secondary);
-      color: var(--color-text-on-primary);}
+      color: var(--color-text-on-primary);
+    }
 
     .tabs-container {
       background: var(--color-surface);
@@ -242,7 +245,8 @@
       border-bottom: 2px solid var(--color-border);
       font-size: 13px;
       font-weight: 600;
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .params-table td {
       padding: 10px 12px;
@@ -353,7 +357,8 @@
 
     .response-header h3 {
       font-size: var(--font-size-base);
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .response-status {
       display: flex;
@@ -370,7 +375,17 @@
 
     .status-success {
       background: var(--color-surface-alt);
-      color: #155724
+      color: var(--color-success);
+    }
+
+    .status-error {
+      background: var(--color-surface-alt);
+      color: var(--color-error);
+    }
+
+    .status-info {
+      background: var(--color-surface-alt);
+      color: var(--color-text);
     }
 
     .response-body {
@@ -390,7 +405,8 @@
       align-items: center;
       justify-content: center;
       height: 100%;
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .empty-response-icon {
       font-size: 48px;
@@ -437,7 +453,8 @@
 
     .modal-header h3 {
       font-size: var(--font-size-large);
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .modal-close {
       background: none;
@@ -456,7 +473,8 @@
 
     .modal-close:hover {
       background: var(--color-surface-alt);
-      color: var(--color-text-secondary); }
+      color: var(--color-text-secondary);
+    }
 
     .modal-body {
       padding: var(--spacing-lg);
@@ -592,7 +610,8 @@
 
         <!-- Params 标签页 -->
         <div class="tab-panel active" id="paramsPanel">
-          <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">Query 参数</h3>
+          <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">Query
+            参数</h3>
           <table class="params-table">
             <thead>
               <tr>
@@ -645,12 +664,14 @@
           </div>
 
           <div id="bodyContent">
-            <div id="bodyNone" style="padding: var(--spacing-xl); text-align: center; color: var(--color-text-secondary); display: block;">
+            <div id="bodyNone"
+              style="padding: var(--spacing-xl); text-align: center; color: var(--color-text-secondary); display: block;">
               该请求没有 Body
             </div>
 
             <div id="bodyFormData" style="display: none;">
-              <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">Form Data</h3>
+              <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">
+                Form Data</h3>
               <table class="params-table">
                 <thead>
                   <tr>
@@ -699,7 +720,8 @@
             </div>
 
             <div id="bodyXForm" style="display: none;">
-              <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">x-www-form-urlencoded</h3>
+              <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">
+                x-www-form-urlencoded</h3>
               <table class="params-table">
                 <thead>
                   <tr>
@@ -750,7 +772,8 @@
 
         <!-- Headers 标签页 -->
         <div class="tab-panel" id="headersPanel">
-          <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">请求头</h3>
+          <h3 style="margin-bottom: 15px; font-size: var(--font-size-base); color: var(--color-text-secondary);">请求头
+          </h3>
           <table class="params-table">
             <thead>
               <tr>
@@ -1519,24 +1542,26 @@
       if (status >= 200 && status < 300) {
         statusBadge.className = 'status-badge status-success';
         statusBadge.textContent = `成功 (${status})`;
+        statusBadge.style.background = '';
+        statusBadge.style.color = '';
         responseBody.style.color = '';
       } else if (status >= 400) {
-        statusBadge.className = 'status-badge';
-        statusBadge.style.background = '#f8d7da';
-        statusBadge.style.color = '#721c24';
+        statusBadge.className = 'status-badge status-error';
         statusBadge.textContent = `错误 (${status})`;
-        responseBody.style.color = '#dc3545';
+        statusBadge.style.background = '';
+        statusBadge.style.color = '';
+        responseBody.style.color = '';
       } else if (status === 0) {
-        statusBadge.className = 'status-badge';
-        statusBadge.style.background = '#f8d7da';
-        statusBadge.style.color = '#721c24';
+        statusBadge.className = 'status-badge status-error';
         statusBadge.textContent = 'Error';
-        responseBody.style.color = '#dc3545';
+        statusBadge.style.background = '';
+        statusBadge.style.color = '';
+        responseBody.style.color = '';
       } else {
-        statusBadge.className = 'status-badge';
-        statusBadge.style.background = '#e2e3e5';
-        statusBadge.style.color = '#383d41';
+        statusBadge.className = 'status-badge status-info';
         statusBadge.textContent = status ? `${status} ${statusText}` : 'Error';
+        statusBadge.style.background = '';
+        statusBadge.style.color = '';
         responseBody.style.color = '';
       }
 
