--- a/apkTools_release/tools/developer/image_compressor.html
+++ b/apkTools_release/tools/developer/image_compressor.html
@@ -5,11 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>图片压缩工具</title>
-    <!-- Google Fonts - 艺术字体 -->
+  <!-- Google Fonts - 艺术字体 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../../assets/css/theme.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="../../assets/css/theme.css">
   <style>
     /* 继承theme.css的基础样式 */
     /* 以下是工具页面特定的样式覆盖 */
@@ -169,9 +171,9 @@
     }
 
     .btn-secondary {
-      background: #6c757d
-    
-      color: var(--color-text-on-primary);}
+      background: var(--color-secondary);
+      color: var(--color-text-on-primary);
+    }
 
     .btn-secondary:hover {
       background: #5a6268
@@ -200,7 +202,7 @@
       border-radius: var(--radius-sm);
       margin-bottom: 20px;
       font-size: 13px;
-      color: #0c5460
+      color: var(--color-text);
     }
 
     .status-message {
