--- a/apkTools_release/tools/developer/keystore_generator.html
+++ b/apkTools_release/tools/developer/keystore_generator.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Android 签名文件生成工具</title>
-      <!-- Google Fonts - 艺术字体 -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="../../assets/css/theme.css">
+    <!-- Google Fonts - 艺术字体 -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@400;500;600;700&family=Inter:wght@400;500;600;700&family=Noto+Sans+SC:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../../assets/css/theme.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/forge/1.3.1/forge.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
@@ -293,6 +295,11 @@
             color: var(--color-text);
         }
 
+        .info-box.warning {
+            border-left-color: var(--color-warning);
+            background: var(--color-surface-alt);
+        }
+
         .history-section {
             margin-top: 30px;
         }
@@ -358,6 +365,7 @@
             font-size: 13px;
             cursor: pointer;
             transition: all 0.2s;
+            color: var(--color-text-on-primary);
         }
 
         .history-btn.download {
@@ -509,11 +517,13 @@
                     style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; flex-wrap: wrap; gap: 10px;">
                     <h2 style="margin: 0;">历史记录</h2>
                     <div style="display: flex; gap: 10px; flex-wrap: wrap;">
-                        <button class="history-btn" style="background: var(--color-success); color: var(--color-text-on-primary);"
+                        <button class="history-btn"
+                            style="background: var(--color-success); color: var(--color-text-on-primary);"
                             onclick="exportAllToProject()">导出所有到项目目录</button>
                         <button class="history-btn" style="background: #17a2b8; color: var(--color-text-on-primary);"
                             onclick="exportHistoryToFile()">导出元数据</button>
-                        <button class="history-btn" style="background: var(--color-secondary); color: var(--color-text-on-primary);"
+                        <button class="history-btn"
+                            style="background: var(--color-secondary); color: var(--color-text-on-primary);"
                             onclick="importHistoryFromFile()">导入历史</button>
                     </div>
                 </div>
@@ -649,7 +659,7 @@
             const formSection = document.createElement('div');
             formSection.className = 'form-section';
             formSection.style.marginTop = '0';
-            formSection.style.background = '#f8f9fa';
+            // 背景色由CSS变量控制，不需要硬编码
 
             const title = document.createElement('h2');
             title.style.marginTop = '0';
@@ -722,8 +732,7 @@
 
             // 添加删除按钮
             const deleteBtn = document.createElement('button');
-            deleteBtn.className = 'download-btn';
-            deleteBtn.style.background = '#dc3545';
+            deleteBtn.className = 'history-btn delete';
             deleteBtn.style.marginTop = '10px';
             deleteBtn.textContent = '删除此记录';
             deleteBtn.onclick = () => {
@@ -1497,8 +1506,9 @@
                             if (infoBox) {
                                 const originalText = infoBox.innerHTML;
                                 infoBox.innerHTML = `<strong>提示：</strong>包名 "${packageName}" 已存在于历史记录中。点击"生成签名文件"时会提示是否覆盖，或选择"取消"直接查看历史记录。`;
-                                infoBox.style.background = '#fff3cd';
-                                infoBox.style.borderLeftColor = '#ffc107';
+                                infoBox.style.background = '';
+                                infoBox.style.borderLeftColor = '';
+                                infoBox.className = 'info-box warning';
 
                                 // 3秒后恢复原提示
                                 setTimeout(() => {
